overlays/kimawesome/applications/tooling/metube/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
spec:
  template:
    spec:
      containers:
        - name: metube
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: metube-nfs-pvc
