overlays/kimawesome/applications/tooling/metube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: metube
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - youtube.internal.kim.tec.br
  rules:
    - name: root
      backendRefs:
        - name: metube
          port: 8081
